<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    app:elevation="6dp"
    android:background="@color/cardColor"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <ImageView
                android:id="@+id/img_logo_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

<!--        <TextView-->
<!--            style="@style/headerTextPrimary"-->
<!--            android:text="Login"-->
<!--            android:layout_marginTop="@dimen/loginViewsMargin"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            app:errorEnabled="true"
            app:counterEnabled="true"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username_login"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/login_username_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password_login"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit_login"
            style="@style/loginButton"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/color3"
            android:text="@string/login_signup_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <View style="@style/Divider"/>

        <Button
            android:id="@+id/btn_submit_login_guest"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorAccent"
            android:text="Masuk Umum  "
            android:textAllCaps="true"
            android:layout_gravity="right"
            android:drawableEnd="@drawable/ic_logout_accent_24dp"
            android:background="@drawable/button_bg_transparent"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</androidx.cardview.widget.CardView>